--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation files('libs/obj-0.4.0.jar')
     implementation files('libs\\obj-0.4.0.jar')
     implementation files('libs\\obj-0.4.0.jar')
+    implementation files('libs/obj-0.4.0.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
