--- a/settings.gradle
+++ b/settings.gradle
@@ -14,5 +14,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "gl_engine_3_1"
 include ':app'
-include ':engine'
-include ':seal_engine'
+include ':gl_engine'
