updte target sdk

--- a/gl_engine/build.gradle
+++ b/gl_engine/build.gradle
@@ -11,6 +11,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        targetSdk 34
     }
 
     buildTypes {
