--- a/.gitignore
+++ b/.gitignore
@@ -271,3 +271,5 @@ local.properties
 /seal_engine/build/intermediates/packaged_res/debug/raw/vertex_shader.glsl
 /seal_engine/build/intermediates/packaged_res/debug/raw/vertex_shader_depth.glsl
 /seal_engine/build/intermediates/packaged_res/debug/raw/vertex_shader_light.glsl
+/.idea/
+/.idea/
